--- a/CAR/CAR.csproj
+++ b/CAR/CAR.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EC2396A2-6A9C-47BD-A813-CB2F6BD7673B}</ProjectGuid>
+    <ProjectGuid>{AEEA842D-5DFB-4A54-A9E5-B74E6A65725B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>OB</RootNamespace>
-    <AssemblyName>OB</AssemblyName>
+    <RootNamespace>CAR</RootNamespace>
+    <AssemblyName>CAR</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animal.cs" />
-    <Compile Include="Cat.cs" />
-    <Compile Include="Dog.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
